--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/style-resources": "^1.2.1",
-    "@nuxtjs/tailwindcss": "^4.2.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.2",
@@ -96,7 +95,7 @@
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^12.1.5",
-    "node-sass": "4.14.0",
+    "node-sass": "^4.14.0",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
     "semantic-release": "^18.0.1"
@@ -107,8 +106,7 @@
   },
   "optionalDependencies": {
     "@sentry/webpack-plugin": "^1.18.3",
-    "fs-extra": "^10.0.1",
-    "fsevents": "^2.3.2"
+    "stylelint-config-standard-scss": "^3.0.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -130,25 +128,25 @@
     }
   },
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'rinkeby' 'prod' 1 1",
+    "local": "sh ./cli-process-env.sh 'rinkeby' 'dev' 1 1",
     "dev": "yarn local && nuxt",
-    "generate": "nuxt generate ",
+    "generate": "nuxt generate --fail-on-error",
     "start": "yarn local && nuxt start",
     "build": "yarn local && nuxt build",
-    "ci:build:dev-rinkeby": "sh cli-process-env.sh 'rinkeby' dev 1 && yarn generate --fail-on-error",
-    "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate --fail-on-error",
-    "ci:build:rinkeby-beta": "yarn ci:prepare:rinkeby-beta && yarn generate --fail-on-error",
-    "ci:build:ropsten-beta": "yarn ci:prepare:ropsten-beta && yarn generate --fail-on-error",
-    "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate --fail-on-error",
-    "ci:build:rinkeby": "yarn ci:prepare:rinkeby && yarn generate --fail-on-error",
-    "ci:build:ropsten": "yarn ci:prepare:ropsten && yarn generate --fail-on-error",
+    "ci:build:dev-rinkeby": "sh cli-process-env.sh 'rinkeby' dev 1 && yarn generate",
+    "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate",
+    "ci:build:rinkeby-beta": "yarn ci:prepare:rinkeby-beta && yarn generate",
+    "ci:build:ropsten-beta": "yarn ci:prepare:ropsten-beta && yarn generate",
+    "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate",
+    "ci:build:rinkeby": "yarn ci:prepare:rinkeby && yarn generate",
+    "ci:build:ropsten": "yarn ci:prepare:ropsten && yarn generate",
     "ci:prepare:rinkeby-beta": "sh cli-process-env.sh 'rinkeby-beta' dev 1",
     "ci:prepare:ropsten-beta": "sh cli-process-env.sh 'ropsten-beta' dev 1",
     "ci:prepare:rinkeby": "sh cli-process-env.sh 'rinkeby' prod 1",
     "ci:prepare:ropsten": "sh cli-process-env.sh 'ropsten' prod 1",
     "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
     "test": "jest",
-    "format:prettier": " prettier -w src",
+    "format": "prettier --ignore-path .eslintignore src nuxt.config.ts",
     "lint": "eslint --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js}",
     "lint:fix": "eslint --fix --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js} --fix",
     "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
@@ -162,5 +160,9 @@
       "@commitlint/config-conventional"
     ]
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.2.0",
+  "peerDependencies": {
+    "@ethersproject/hash": "*",
+    "qrcode": "1"
+  }
 }
