--- a/.editorconfig
+++ b/.editorconfig
@@ -41,15 +41,6 @@ ij_css_space_before_opening_brace          = true
 ij_css_use_double_quotes                   = true
 ij_css_value_alignment                     = do_not_align
 
-[firebase-*.yml]
-ij_firebase_rules_tab_width                   = 2
-ij_firebase_rules_indent_size                 = 2
-ij_firebase_rules_continuation_indent_size    = 2
-ij_firebase_rules_keep_blank_lines_in_code    = 0
-ij_firebase_rules_keep_indents_on_empty_lines = false
-ij_firebase_rules_space_after_comma           = true
-ij_firebase_rules_space_before_comma          = false
-
 [*.scss]
 ij_scss_tab_width                           = 2
 ij_scss_indent_size                         = 2
@@ -241,7 +232,7 @@ ij_typescript_ternary_operation_wrap                            =
 ij_typescript_union_types_wrap                                  = on_every_item
 ij_typescript_use_chained_calls_group_indents                   = false
 ij_typescript_use_double_quotes                                 = true
-ij_typescript_use_explicit_js_extension                         = global
+ij_typescript_use_explicit_js_extension                         = auto
 ij_typescript_use_path_mapping                                  = always
 ij_typescript_use_public_modifier                               = false
 ij_typescript_use_semicolon_after_statement                     = true
@@ -321,7 +312,6 @@ ij_javascript_imports_wrap                                      = on_every_item
 ij_javascript_indent_case_from_switch                           = true
 ij_javascript_indent_chained_calls                              = true
 ij_javascript_indent_package_children                           = 0
-ij_javascript_jsx_attribute_value                               = based on type
 ij_javascript_keep_blank_lines_in_code                          = 1
 ij_javascript_keep_first_column_comment                         = true
 ij_javascript_keep_indents_on_empty_lines                       = false
@@ -418,7 +408,7 @@ ij_javascript_ternary_operation_wrap                            = off
 ij_javascript_union_types_wrap                                  = on_every_item
 ij_javascript_use_chained_calls_group_indents                   = false
 ij_javascript_use_double_quotes                                 = true
-ij_javascript_use_explicit_js_extension                         = global
+ij_javascript_use_explicit_js_extension                         = auto
 ij_javascript_use_path_mapping                                  = always
 ij_javascript_use_public_modifier                               = false
 ij_javascript_use_semicolon_after_statement                     = true
@@ -463,8 +453,6 @@ ij_html_keep_line_breaks_in_text           = true
 ij_html_keep_whitespaces                   = false
 ij_html_keep_whitespaces_inside            = span, pre, textarea, code
 ij_html_line_comment_at_first_column       = true
-ij_html_new_line_after_last_attribute      = when multiline
-ij_html_new_line_before_first_attribute    = when multiline
 ij_html_quote_style                        = double
 ij_html_remove_new_line_before_tags        = br
 ij_html_space_after_tag_name               = false
