--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
-    "@matterlabs/eslint-config-nuxt": "^1.0.6",
-    "@matterlabs/prettier-config": "^1.0.2",
     "@matterlabs/zksync-nuxt-core": "1.7.4",
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/google-gtag": "^1.0.4",
@@ -63,7 +61,6 @@
     "blockies-ts": "1.0.0",
     "lottie-web": "^5.7.8",
     "mixpanel-browser": "^2.42.0",
-    "moment-timezone": "^0.5.33",
     "multiformats": "^9.4.7",
     "nuxt": "^2.15.8",
     "nuxt-typed-vuex": "^0.3.0",
@@ -72,33 +69,37 @@
     "zksync": "0.12.0-alpha.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@ethersproject/address": "^5.5.0",
     "@ethersproject/bignumber": "^5.5.0",
     "@inkline/nuxt": "^2.3.6",
+    "@matterlabs/eslint-config-nuxt": "^1.0.6",
+    "@matterlabs/prettier-config": "^1.0.2",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/style-resources": "^1.2.1",
     "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.3",
     "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/crypto-js": "^4.0.2",
     "@types/jest": "^26.0.23",
     "@types/mixpanel-browser": "^2.35.8",
-    "commitlint": "^11.0.0",
     "cspell": "^5.19.3",
     "eslint": "^8.12.0",
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^12.1.5",
+    "moment": "^2.29.2",
     "node-sass": "^4.14.0",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
-    "semantic-release": "^18.0.1"
+    "semantic-release": "^19.0.2"
   },
   "resolutions": {
     "chalk": "4.1.2",
@@ -123,36 +124,36 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint --format -E HUSKY_GIT_PARAMS"
+      "commit-msg": "npx --no-install commitlint --edit \"$1\"",
+      "pre-commit": "CI=\"1\"\nnpx lint-staged"
     }
   },
   "scripts": {
-    "local": "sh ./cli-process-env.sh 'rinkeby' 'dev' 1 1",
-    "dev": "yarn local && nuxt",
-    "generate": "nuxt generate --fail-on-error",
-    "start": "yarn local && nuxt start",
     "build": "yarn local && nuxt build",
-    "ci:build:dev-rinkeby": "sh cli-process-env.sh 'rinkeby' dev 1 && yarn generate",
     "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate",
-    "ci:build:rinkeby-beta": "yarn ci:prepare:rinkeby-beta && yarn generate",
-    "ci:build:ropsten-beta": "yarn ci:prepare:ropsten-beta && yarn generate",
+    "ci:build:dev-rinkeby": "sh cli-process-env.sh 'rinkeby' dev 1 && yarn generate",
     "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate",
     "ci:build:rinkeby": "yarn ci:prepare:rinkeby && yarn generate",
+    "ci:build:rinkeby-beta": "yarn ci:prepare:rinkeby-beta && yarn generate",
     "ci:build:ropsten": "yarn ci:prepare:ropsten && yarn generate",
-    "ci:prepare:rinkeby-beta": "sh cli-process-env.sh 'rinkeby-beta' dev 1",
-    "ci:prepare:ropsten-beta": "sh cli-process-env.sh 'ropsten-beta' dev 1",
-    "ci:prepare:rinkeby": "sh cli-process-env.sh 'rinkeby' prod 1",
-    "ci:prepare:ropsten": "sh cli-process-env.sh 'ropsten' prod 1",
+    "ci:build:ropsten-beta": "yarn ci:prepare:ropsten-beta && yarn generate",
+    "ci:check": "yarn lint && yarn spell-check",
     "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
-    "test": "jest",
-    "format": "prettier --ignore-path .eslintignore src nuxt.config.ts",
+    "ci:prepare:rinkeby": "sh cli-process-env.sh 'rinkeby' prod 1",
+    "ci:prepare:rinkeby-beta": "sh cli-process-env.sh 'rinkeby-beta' dev 1",
+    "ci:prepare:ropsten": "sh cli-process-env.sh 'ropsten' prod 1",
+    "ci:prepare:ropsten-beta": "sh cli-process-env.sh 'ropsten-beta' dev 1",
+    "dev": "yarn local && nuxt",
+    "format": "prettier -w --ignore-path .eslintignore **/*.{ts,vue,ks}",
+    "generate": "nuxt generate --fail-on-error",
     "lint": "eslint --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js}",
     "lint:fix": "eslint --fix --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js} --fix",
-    "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
-    "ci:check": "yarn lint && yarn spell-check",
+    "local": "sh ./cli-process-env.sh 'rinkeby' 'prod' 1 1",
+    "postinstall": "husky install",
     "semantic-release": "semantic-release",
-    "postinstall": "husky install"
+    "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
+    "start": "yarn local && nuxt start",
+    "test": "jest"
   },
   "prettier": "@matterlabs/prettier-config",
   "commitlint": {
@@ -162,7 +163,10 @@
   },
   "packageManager": "yarn@3.2.0",
   "peerDependencies": {
-    "@ethersproject/hash": "*",
-    "qrcode": "1"
+    "@ethersproject/hash": "^5.5.0"
+  },
+  "engines": {
+    "npm": ">=8.5.5",
+    "node": ">=14.17.3"
   }
 }
