--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@matterlabs/zksync-zkwallet-vue",
   "title": "zkSync.io Wallet | Try solution for the Ethereum scalability\n with zero security compromises",
   "main": "nuxt.config.ts",
-  "types": "src/types/index.d.ts",
+  "types": [
+    "src/types/index.d.ts"
+  ],
   "files": [
     "src/types",
     "src"
@@ -161,12 +163,8 @@
       "@commitlint/config-conventional"
     ]
   },
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "yarn@3.1.1",
   "peerDependencies": {
     "@ethersproject/hash": "^5.5.0"
-  },
-  "engines": {
-    "npm": ">=8.5.5",
-    "node": ">=14.17.3"
   }
 }
