feat: additional eslinting check for the `build_and_deploy` & `release` actions
* Additionally each workflow now checks concurrency to avoid parallel execution

Closes ZKF-1482

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,4 +1,9 @@
 name: "Deploy production"
+
+concurrency:
+  group: deploy-production
+  cancel-in-progress: true
+
 "on":
   workflow_dispatch:
     inputs:
