--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,5 +1,10 @@
 name: "Deploy staging"
-"on":
+
+concurrency:
+  group: deploy-staging
+  cancel-in-progress: true
+
+on:
   push:
     branches: [ master ]
 jobs:
