--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,10 @@
 name: "Semantic release"
-"on":
+
+concurrency:
+  group: semantic-release
+  cancel-in-progress: true
+
+on:
   push:
     branches: [ master ]
 jobs:
@@ -26,7 +31,11 @@ jobs:
       - name: "Install dependencies"
         run: |
           yarn set version 3.1.1
-          yarn install
+          yarn install --immutable
+
+      - name: "Lint check"
+        run: |
+          eslint --config .eslintrc.js --ignore-path .eslintignore "src/**/*.{ts,vue,js}" --max-warnings 0
 
       - name: "Semantic release"
         run: yarn semantic-release
