--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: "Lint check"
         run: |
-          eslint --config .eslintrc.js --ignore-path .eslintignore "src/**/*.{ts,vue,js}" --max-warnings 0
+          yarn dlx eslint --config .eslintrc.js --ignore-path .eslintignore "src/**/*.{ts,vue,js}" --max-warnings 0
 
       - name: "Generate rinkeby dist"
         run: yarn run ci:build:rinkeby
