--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: "Lint check"
         run: |
-          yarn dlx eslint --config .eslintrc.js --ignore-path .eslintignore "src/**/*.{ts,vue,js}" --max-warnings 0
+          yarn lint --max-warnings 0
 
       - name: "Semantic release"
         run: yarn semantic-release
