fix: arrow back button (#244)
* fix: refactor route back

* fix: remove server port config

* fix: route back loop stuck

--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "generate": "nuxt generate --fail-on-error",
     "lint": "eslint --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js}",
     "lint:fix": "eslint --fix --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js} --fix",
-    "local": "sh ./cli-process-env.sh 'rinkeby' 'prod' 1 1",
+    "local": "sh ./cli-process-env.sh 'rinkeby' 'dev' 1 1",
     "postinstall": "husky install",
     "semantic-release": "semantic-release",
     "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
