--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -1,5 +1,10 @@
 name: "Deploy preview"
-"on":
+
+concurrency:
+  group: deploy-pr-${{ github.ref }}
+  cancel-in-progress: true
+
+on:
   pull_request:
   workflow_dispatch:
     inputs:
@@ -28,6 +33,10 @@ jobs:
         run: |
           yarn set version 3.1.1
           yarn install
+
+      - name: "Lint check"
+        run: |
+          yarn lint --max-warnings 0
 
       - name: "Generate rinkeby dist"
         run: yarn run ci:build:rinkeby
