--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "blockies-ts": "1.0.0",
     "lottie-web": "^5.7.8",
     "mixpanel-browser": "^2.42.0",
+    "moment-timezone": "^0.5.34",
     "multiformats": "^9.4.7",
     "nuxt": "^2.15.8",
     "nuxt-typed-vuex": "^0.3.0",
@@ -98,7 +99,6 @@
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^12.1.5",
-    "moment": "^2.29.2",
     "node-sass": "^4.14.0",
     "qrcode": "^1.0.0",
     "sass-loader": "^10.1.1",
