fix: now version is taken straight from the `package.json`
Additionally:
 * code linted & re-formatted
 * after the cspell execution new exceptions were added to the cspell-zksync.txt

Closes ZKF-1772

--- a/package.json
+++ b/package.json
@@ -114,14 +114,14 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "eslint --config .eslintrc.js --ignore-path .eslintignore",
+      "eslint --config .eslintrc.js --fix --ignore-path .eslintignore",
       "prettier -w"
     ],
     "*.scss": [
       "prettier -w"
     ],
     "*.vue": [
-      "eslint --config .eslintrc.js --ignore-path .eslintignore",
+      "eslint --config .eslintrc.js --fix --ignore-path .eslintignore",
       "prettier -w"
     ]
   },
