--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
   "dependencies": {
+    "@inkline/inkline": "^2.3.6",
+    "@inkline/nuxt": "^2.3.6",
     "@matterlabs/eslint-config-nuxt": "^1.0.6",
     "@matterlabs/prettier-config": "^1.0.2",
     "@matterlabs/zksync-nuxt-core": "1.7.6",
@@ -65,6 +67,7 @@
     "mixpanel-browser": "^2.42.0",
     "moment-timezone": "^0.5.34",
     "multiformats": "^9.4.7",
+    "node-sass": "^6.0.1",
     "nuxt": "^2.15.8",
     "nuxt-typed-vuex": "^0.3.0",
     "oh-vue-icons": "^0.4.7",
@@ -76,7 +79,6 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@ethersproject/address": "^5.5.0",
     "@ethersproject/bignumber": "^5.5.0",
-    "@inkline/nuxt": "^2.3.6",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/google-fonts": "^1.3.0",
@@ -97,9 +99,8 @@
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^12.1.5",
-    "node-sass": "^4.14.0",
     "qrcode": "^1.0.0",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^10.2.1",
     "semantic-release": "^19.0.2"
   },
   "resolutions": {
