--- a/package.json
+++ b/package.json
@@ -165,5 +165,8 @@
   "packageManager": "yarn@3.1.1",
   "peerDependencies": {
     "@ethersproject/hash": "^5.5.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
