feat: transfer providers (#281)
* feat: transfer providers

* fix: move mixins out of layouts

* fix: refactor code a bit, remove unused files

* fix: remove unneeded ts as

* fix: remove banxa transfer on rinkeby

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "jsx": "preserve",
     "lib": [
       "es2019",
       "dom",
@@ -41,7 +42,6 @@
       "@nuxt/types",
       "@nuxtjs/sentry",
       "@matterlabs/zksync-nuxt-core",
-      "@types/jest",
       "@inkline/inkline/types",
       "nuxt-typed-vuex",
       "vue-router/types"
