Update the explorer links to work with localhost (#2)
* Update the explorer links to work with localhost

* PP-172: Added missing references to explorer in localhost

* PP-172: Update explorer url depending of explorer version

* PP-172: Remove explorer version for unused env files

* PP-172: remove explorer version in env.ropsten-beta

--- a/environments/.env.localhost
+++ b/environments/.env.localhost
@@ -10,5 +10,7 @@ SENTRY_DSN=https://674c7230d4594037bc1a9797339aa831@o496053.ingest.sentry.io/566
 GTAG_ID=GTM-P9S4QSF
 ZK_SPECIAL_API="127.0.0.1:3001"
 USE_HTTP=true
-ZK_SPECIAL_SCAN="https://rinkeby-beta-scan.zksync.dev"
+ZK_SPECIAL_SCAN="http://localhost:7001"
 ZK_NETWORK="localhost"
+APP_ZK_SCAN=http://localhost:7001
+APP_EXPLORER_VERSION=0.1.0
