--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -12,7 +12,7 @@ on:
         type: string
         required: true
         default: "rinkeby"
-        description: "target/env: mainnet, sepolia, goerli, rinkeby-beta, goerli-beta, rinkeby-stage"
+        description: "target/env: mainnet, goerli, sepolia, rinkeby-beta, goerli-beta, rinkeby-stage"
 jobs:
   build_and_preview:
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }} || ${{ github.event.repository.full_name == github.repository }}
