--- a/firebase.json
+++ b/firebase.json
@@ -103,7 +103,7 @@
       ]
     },
     {
-      "target": "rinkeby-beta",
+      "target": "prod-sepolia",
       "public": "public",
       "ignore": [
         "firebase.json",
@@ -114,7 +114,7 @@
         {
           "source": "**",
           "type": 301,
-          "destination": "https://wallet.zksync.io?network=rinkeby-beta"
+          "destination": "https://wallet.zksync.io?network=sepolia"
         }
       ]
     },
