--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       "url": "https://opensource.org/licenses/apache2.0.php"
     }
   ],
-  "version": "3.23.0",
+  "version": "3.22.0",
   "homepage": "https://wallet.zksync.io",
   "description": "zkWallet was created to unleash the power of zkSync L2 operations and give anyone an access to L2 zkSync features on mainnet",
   "repository": "https://github.com/matter-labs/zksync-wallet-vue",
@@ -57,7 +57,7 @@
     "@inkline/nuxt": "^2.3.6",
     "@matterlabs/eslint-config-nuxt": "^1.0.6",
     "@matterlabs/prettier-config": "^1.0.2",
-    "@matterlabs/zksync-nuxt-core": "1.8.2",
+    "@matterlabs/zksync-nuxt-core": "^1.9.0",
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/sentry": "^5.1.7",
@@ -127,16 +127,14 @@
   "scripts": {
     "build": "yarn local && nuxt build",
     "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate",
-    "ci:build:dev-goerli": "sh cli-process-env.sh 'goerli' dev 1 && yarn generate",
+    "ci:build:dev-sepolia": "sh cli-process-env.sh 'sepolia' dev 1 && yarn generate",
     "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate",
     "ci:build:sepolia": "yarn ci:prepare:sepolia && yarn generate",
-    "ci:build:rinkeby-beta": "yarn ci:prepare:rinkeby-beta && yarn generate",
     "ci:build:goerli": "yarn ci:prepare:goerli && yarn generate",
     "ci:build:goerli-beta": "yarn ci:prepare:goerli-beta && yarn generate",
     "ci:check": "yarn lint && yarn spell-check",
     "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
     "ci:prepare:sepolia": "sh cli-process-env.sh 'sepolia' prod 1",
-    "ci:prepare:rinkeby-beta": "sh cli-process-env.sh 'rinkeby-beta' dev 1",
     "ci:prepare:goerli": "sh cli-process-env.sh 'goerli' prod 1",
     "dev": "yarn local && nuxt",
     "format": "prettier -w --ignore-path .eslintignore **/*.{ts,vue,ks}",
