fix: remove sepolia network

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -12,7 +12,7 @@ on:
         type: string
         required: true
         default: "goerli"
-        description: "target/env: mainnet, goerli, goerli-beta, sepolia"
+        description: "target/env: mainnet, goerli, goerli-beta"
 jobs:
   build_and_preview:
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }} || ${{ github.event.repository.full_name == github.repository }}
