--- a/package.json
+++ b/package.json
@@ -57,11 +57,12 @@
     "@inkline/nuxt": "^2.3.6",
     "@matterlabs/eslint-config-nuxt": "^1.0.6",
     "@matterlabs/prettier-config": "^1.0.2",
-    "@matterlabs/zksync-nuxt-core": "^1.10.1",
+    "@matterlabs/zksync-nuxt-core": "^1.10.2",
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/sentry": "^5.1.7",
     "@ramp-network/ramp-instant-sdk": "^2.5.0",
+    "@web3-onboard/core": "^2.16.2",
     "blockies-ts": "1.0.0",
     "lottie-web": "^5.7.8",
     "mixpanel-browser": "^2.42.0",
