--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rsksmart/ri-aggregation-wallet",
+  "name": "@matterlabs/zksync-zkwallet-vue",
   "title": "zkSync.io Wallet | Try solution for the Ethereum scalability\n with zero security compromises",
   "main": "nuxt.config.ts",
   "types": "src/types/index.d.ts",
@@ -52,26 +52,6 @@
   "bugs": {
     "url": "https://github.com/matter-labs/zksync-wallet-vue/issues"
   },
-  "scripts": {
-    "build": "yarn local && nuxt build",
-    "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate",
-    "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate",
-    "ci:build:goerli": "yarn ci:prepare:goerli && yarn generate",
-    "ci:build:goerli-beta": "yarn ci:prepare:goerli-beta && yarn generate",
-    "ci:check": "yarn lint && yarn spell-check",
-    "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
-    "ci:prepare:goerli": "sh cli-process-env.sh 'goerli' prod 1",
-    "dev": "yarn local && nuxt",
-    "format": "prettier -w --ignore-path .eslintignore **/*.{ts,vue,ks}",
-    "generate": "nuxt generate --fail-on-error",
-    "lint": "eslint --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js}",
-    "lint:fix": "eslint --fix --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js} --fix",
-    "local": "sh ./cli-process-env.sh 'localhost' 'dev' 1 1",
-    "postinstall": "husky install",
-    "semantic-release": "semantic-release",
-    "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
-    "start": "yarn local && nuxt start"
-  },
   "dependencies": {
     "@inkline/inkline": "^2.3.6",
     "@inkline/nuxt": "^2.3.6",
@@ -79,58 +59,32 @@
     "@matterlabs/prettier-config": "^1.0.2",
     "@matterlabs/zksync-nuxt-core": "^1.10.2",
     "@nuxt/typescript-runtime": "^2.1.0",
-    "@nuxtjs/axios": "^5.13.1",
-    "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/sentry": "^5.1.7",
     "@ramp-network/ramp-instant-sdk": "^2.5.0",
-    "@walletconnect/web3-provider": "^1.8.0",
-    "@web3-onboard/coinbase": "^2.2.0",
+    "@rsksmart/rif-rollup-nuxt-core": "git@github.com:rsksmart/rif-rollup-nuxt-core.git",
     "@web3-onboard/core": "^2.16.2",
-    "@web3-onboard/dcent": "^2.2.2",
-    "@web3-onboard/fortmatic": "^2.0.14",
-    "@web3-onboard/gnosis": "^2.1.5",
-    "@web3-onboard/injected-wallets": "^2.4.0",
-    "@web3-onboard/keepkey": "^2.3.2",
-    "@web3-onboard/ledger": "^2.4.0",
-    "@web3-onboard/mew-wallet": "^2.0.0",
-    "@web3-onboard/portis": "^2.1.3",
-    "@web3-onboard/torus": "^2.2.0",
-    "@web3-onboard/trezor": "^2.3.2",
-    "@web3-onboard/walletconnect": "^2.2.2",
     "blockies-ts": "1.0.0",
-    "core-js": "^3.9.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^3.0.0",
-    "eslint-plugin-prettier-vue": "^3.0.0",
-    "ethers": "^5.4.1",
-    "js-cache": "^1.0.3",
     "lottie-web": "^5.7.8",
     "mixpanel-browser": "^2.42.0",
     "moment-timezone": "^0.5.34",
     "multiformats": "^9.4.7",
-    "nuxt": "^2.15.3",
+    "nuxt": "^2.15.8",
     "nuxt-typed-vuex": "^0.3.0",
     "oh-vue-icons": "^0.4.7",
-    "ts-node": "^9.1.1",
     "vue-qrcode": "0.4.0",
-    "web3": "^1.5.3",
     "zksync": "^0.13.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@ethersproject/address": "^5.5.0",
     "@ethersproject/bignumber": "^5.5.0",
-    "@nuxt/types": "^2.15.3",
+    "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^6.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/style-resources": "^1.2.1",
-    "@nuxtjs/stylelint-module": "^4.0.0",
-    "@nuxtjs/tailwindcss": "^4.0.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/exec": "^6.0.3",
@@ -140,34 +94,14 @@
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/crypto-js": "^4.0.2",
     "@types/mixpanel-browser": "^2.35.8",
-    "@vue/test-utils": "^1.1.3",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
     "cspell": "^5.19.3",
     "eslint": "^8.12.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.7.0",
-    "fibers": "^5.0.0",
     "husky": "^7.0.0",
-    "jest": "^26.6.3",
     "lint-staged": "^12.1.5",
-    "node-gyp": "^8.3.0",
     "node-sass": "^8",
-    "pinst": "^2.0.0",
-    "postcss": "^8.2.13",
-    "prettier": "^2.2.1",
     "qrcode": "^1.0.0",
-    "sass": "^1.32.12",
     "sass-loader": "^10.2.1",
-    "semantic-release": "^18.0.0",
-    "stylelint": "^13.12.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^21.0.0",
-    "ts-jest": "^26.5.4",
-    "vue-jest": "^3.0.4"
+    "semantic-release": "^19.0.2"
   },
   "resolutions": {
     "chalk": "4.1.2",
@@ -191,6 +125,26 @@
       "commit-msg": "npx --no-install commitlint --edit \"$1\"",
       "pre-commit": "CI=\"1\"\nnpx lint-staged"
     }
+  },
+  "scripts": {
+    "build": "yarn local && nuxt build",
+    "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate",
+    "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate",
+    "ci:build:goerli": "yarn ci:prepare:goerli && yarn generate",
+    "ci:build:goerli-beta": "yarn ci:prepare:goerli-beta && yarn generate",
+    "ci:check": "yarn lint && yarn spell-check",
+    "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
+    "ci:prepare:goerli": "sh cli-process-env.sh 'goerli' prod 1",
+    "dev": "yarn local && nuxt",
+    "format": "prettier -w --ignore-path .eslintignore **/*.{ts,vue,ks}",
+    "generate": "nuxt generate --fail-on-error",
+    "lint": "eslint --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js}",
+    "lint:fix": "eslint --fix --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js} --fix",
+    "local": "sh ./cli-process-env.sh 'goerli' 'dev' 1 1",
+    "postinstall": "husky install",
+    "semantic-release": "semantic-release",
+    "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
+    "start": "yarn local && nuxt start"
   },
   "prettier": "@matterlabs/prettier-config",
   "commitlint": {
