--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -29,20 +29,20 @@ jobs:
 
       - name: "Deploy target: stage-mainnet"
         run: yarn run ci:build:prod
-      - uses: matter-labs/action-hosting-deploy@main
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
-          target: stage-mainnet
-          projectId: zksync-vue
-          channelId: live
+#      - uses: matter-labs/action-hosting-deploy@main
+#        with:
+#          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+#          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}"
+#          target: stage-mainnet
+#          projectId: zksync-vue
+#          channelId: live
 
       - name: "Prepare /functions/"
         run: npm --prefix functions i
 
-      - name: "Deploy functions to firebase: zksync-vue"
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only functions
-        env:
-          FIREBASE_TOKEN: '${{ secrets.FIREBASE_DEPLOY_TOKEN }}'
+#      - name: "Deploy functions to firebase: zksync-vue"
+#        uses: w9jds/firebase-action@master
+#        with:
+#          args: deploy --only functions
+#        env:
+#          FIREBASE_TOKEN: '${{ secrets.FIREBASE_DEPLOY_TOKEN }}'
