feat: deposit rebranding (#8)
* feat: deposit rebranding

* feat: rebranded loading screens

* fix: medium url

* refactor: wording

* refactor: changed RSK to Rootstock

* refactor: replace RSK for rootstock

* refactor: changed Etherum logo to Rootstock

* refactor: change to Rootstock

* refactor: change background color begin Rootstock logo

---------

Co-authored-by: Anni Piragauta <anni.piragauta@iovlabs.org>

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/sentry": "^5.1.7",
     "@ramp-network/ramp-instant-sdk": "^2.5.0",
-    "@rsksmart/rif-rollup-nuxt-core": "git@github.com:rsksmart/rif-rollup-nuxt-core.git",
+    "@rsksmart/rif-rollup-nuxt-core": "git+ssh://git@github.com:rsksmart/rif-rollup-nuxt-core.git",
     "@web3-onboard/core": "^2.16.2",
     "blockies-ts": "1.0.0",
     "lottie-web": "^5.7.8",
@@ -72,7 +72,7 @@
     "nuxt-typed-vuex": "^0.3.0",
     "oh-vue-icons": "^0.4.7",
     "vue-qrcode": "0.4.0",
-    "zksync": "git@github.com:rsksmart/rif-rollup-js-sdk.git"
+    "zksync": "git+ssh://git@github.com:rsksmart/rif-rollup-js-sdk.git"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
