refactor: revert hchange from refactor/rootstock-networks

--- a/package.json
+++ b/package.json
@@ -129,18 +129,18 @@
     "build": "yarn local && nuxt build",
     "ci:build:dev-mainnet": "sh cli-process-env.sh 'mainnet' dev 1 && yarn generate",
     "ci:build:prod": "yarn ci:prepare:mainnet && yarn generate",
-    "ci:build:testnet": "yarn ci:prepare:testnet && yarn generate",
+    "ci:build:goerli": "yarn ci:prepare:goerli && yarn generate",
+    "ci:build:goerli-beta": "yarn ci:prepare:goerli-beta && yarn generate",
     "ci:check": "yarn lint && yarn spell-check",
     "ci:prepare:mainnet": "sh cli-process-env.sh 'mainnet' prod 1",
-    "ci:prepare:testnet": "sh cli-process-env.sh 'testnet' prod 1",
+    "ci:prepare:goerli": "sh cli-process-env.sh 'goerli' prod 1",
     "dev": "yarn local && nuxt",
-    "dev:testnet": "yarn testnet && nuxt",
     "format": "prettier -w --ignore-path .eslintignore **/*.{ts,vue,ks}",
     "generate": "nuxt generate --fail-on-error",
     "lint": "eslint --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js}",
     "lint:fix": "eslint --fix --config .eslintrc.js --ignore-path .eslintignore src/**/*.{ts,vue,js} --fix",
     "local": "sh ./cli-process-env.sh 'local' 'dev' 1 1",
-    "testnet": "sh ./cli-process-env.sh 'testnet' 'dev' 1 1",
+    "goerli": "sh ./cli-process-env.sh 'goerli' 'dev' 1 1",
     "postinstall": "husky install",
     "semantic-release": "semantic-release",
     "spell-check": "cspell -c cspell.json src/**/*.{ts,vue,js} *.md",
