--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -24,10 +24,10 @@ jobs:
       - name: "Enable yarn cache"
         uses: c-hive/gha-yarn-cache@v2  # using cache
 
-      - name: "Setup node@18"
+      - name: "Setup node@16"
         uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: 16
 
       - name: "Install dependencies"
         run: |
@@ -40,6 +40,11 @@ jobs:
 
       - name: "Generate dist (default network: goerli)"
         run: yarn run ci:build:goerli
+
+      - name: "Setup node@18"
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
 
       - name: "Deploy preview"
         uses: matter-labs/action-hosting-deploy@main
