--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -29,10 +29,10 @@ jobs:
       - name: "Enable yarn cache"
         uses: c-hive/gha-yarn-cache@v2  # using cache
 
-      - name: "Setup node@18"
+      - name: "Setup node@16"
         uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: 16
 
       - name: "Install dependencies"
         run: |
@@ -46,7 +46,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 'lts/*'
-        
+
+      - name: "Setup node@18"
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+
       - name: "Deploy target: prod-mainnet"
         uses: matter-labs/action-hosting-deploy@main
         with:
