--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -46,7 +46,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 'lts/*'
-        
+
+      - name: "Setup node@18"
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+
       - name: "Deploy target: prod-mainnet"
         uses: matter-labs/action-hosting-deploy@main
         with:
